# terraform-graphical-manager

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  run.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: app.py  auth.py  backend_detector.py  cli.py  config.py  env_validator.py  execution_queue.py  plan_parser.py  provider_detector.py  sentinel_runner.py  state_parser.py  terraform_runner.py  version_manager.py  workspace_scanner.py
app/routes/: api_routes.py  auth_routes.py  execution_routes.py  settings_routes.py  workspace_routes.py
app/storage/: __init__.py  aws_backend.py  azure_backend.py  gcp_backend.py  local_backend.py
config/: tfg.conf.example
examples/repos/01-random-strings/: .terraform.lock.hcl  variables.tf
examples/repos/02-local-files/: main.tf  variables.tf
examples/repos/03-config-generator/: main.tf
examples/repos/04-pet-names/: README.md  outputs.tf  variables.tf
examples/repos/05-secret-tokens/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
examples/repos/06-multi-env-configs/: README.md  main.tf  variables.tf
examples/repos/07-uuid-generator/: README.md  outputs.tf  variables.tf
examples/repos/08-null-resources/: main.tf  outputs.tf
examples/repos/09-modules-demo/: main.tf  variables.tf
examples/repos/10-data-sources/: outputs.tf  variables.tf
examples/repos/11-dynamic-blocks/: README.md  variables.tf
examples/repos/12-conditionals/: README.md
examples/repos/13-locals-expressions/: outputs.tf
examples/repos/14-lifecycle-rules/: README.md  main.tf
examples/repos/15-full-stack-sim/: README.md  main.tf  outputs.tf  variables.tf
examples/repos/group1/01-random-strings/: README.md  main.tf  outputs.tf
examples/repos/group1/02-local-files/: README.md  outputs.tf
examples/repos/group1/03-config-generator/: README.md  outputs.tf  variables.tf
examples/sentinel/: README.md
examples/sentinel/cost/: allowed-instance-types.sentinel  ec2-ebs-optimized-required.sentinel  no-expensive-instance-types.sentinel  rds-no-multi-az-in-dev.sentinel  sentinel.hcl
examples/sentinel/networking/: no-public-ip-on-launch.sentinel  no-rdp-open-to-world.sentinel  no-ssh-open-to-world.sentinel  no-unrestricted-ingress.sentinel  sentinel.hcl  vpc-flow-logs-enabled.sentinel
examples/sentinel/security/: iam-no-admin-policy.sentinel  iam-no-wildcard-actions.sentinel  s3-encryption-enabled.sentinel  s3-no-public-acl.sentinel  secrets-not-in-variables.sentinel  sentinel.hcl  tls-minimum-version.sentinel
examples/sentinel/tagging/: environment-tag-valid-values.sentinel  no-default-tags-override.sentinel  required-tags.sentinel  sentinel.hcl
static/css/: main.css
static/js/: graph.js  main.js
templates/: base.html  dashboard.html  execution_detail.html  execution_modal.html  graph_view.html  login.html  plan_diff.html  settings.html  state_view.html  workspace.html
terraform_graphical_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_cli.py  test_config.py  test_plan_parser.py  test_routes.py  test_run.py  test_state_parser.py  test_version_manager.py  test_workspace_scanner.py
(+23 files in other folders)
